2010-06-18 Alexandru Csete <oz9aec at gmail.com>

    * src/main.c:
    Applied patch 3009725: Delete Explicit Call to gtk_set_locale.
    

2010-05-23 Alexandru Csete <oz9aec at gmail.com>

    * src/print-pass.h:
    Applied patch 3005548: Cut and Paste Error In print_pass.h


2010-05-20 Alexandru Csete <oz9aec at gmail.com>

    * src/sgpsdp/sgp4sdp4.c:
    Applied patch 3002344: Remove Uninitialized Jump.

    * src/first-time.c:
    Applied patch 3002345: Free catfilename.

    * src/main.c:
    Applied patch 3002348: Option context never freed.


2010-05-04 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sky-at-glance.c:
    Click on satellite pass shows pass details.


2010-03-12 Stephane Fillod <fillods at users.sf.net>

    * src/gtk-event-list-popup.c:
    * src/gtk-sat-map-popup.c:
    * src/gtk-sat-list-popup.c:
    * src/gtk-single-sat.c:
    * src/gtk-polar-view-popup.c:
    * src/sat-info.[ch]:
    Rename show_sat_info as show_sat_info_menu_cb,
    show_sat_info can now be called from outside a menu.

    * src/sat-pref-qth.c:
    * src/sat-pref-rot.c:
    * src/gtk-sat-list.c:
    * src/gtk-event-list.c:
    * src/gtk-sat-map.c:
    * src/gtk-polar-view.c:
    Enter directly popup upon double-click.

    * po/gpredict.pot:
    * po/fr.po:
    Misc update and merge with launchpad translations.


2010-02-20 Alexandru Csete <oz9aec at gmail.com>

    * src/sat-pref-rig.c:
    * src/radio-conf.h:
    * src/gtk-rig-ctrl.c:
    Replace RIG_TYPE_SPLIT with RIG_TYPE_TOGGLE (from patch 2955061).

    * src/sat-pref-rot.c:
    Use g_str_has_suffix() instead of g_strrstr() (from patch 2955061).


2010-02-15 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    * src/sat-pref-rig.c:
    Applied patch 2951724: Allow FT-857 to work QSO (should also work with 817 and 897).

    * src/radio-conf.h:
    * sat-pref-rig-editor.c:
    Updated to work with patch 2951724: Allow FT-857 to work QSO.


2010-02-07 Alexandru Csete <oz9aec at gmail.com>
