@@ -35,6 +35,7 @@ Changes in version 1.2 (TBD)
 - Applied patch 3002348: Option context never freed (Thanks to Charles Suprin AA1VS).
 - Applied patch 3005548: Cut and Paste Error In print_pass.h (Thanks to Charles Suprin AA1VS).
 - Applied patch 3009725: Delete Explicit Call to gtk_set_locale (Thanks to Charles Suprin AA1VS).
+- Applied patch 3009727: Free satellite hash references (Thanks to Charles Suprin AA1VS).
 - Slightly improved UI for the single-satellite view.
 - Command line options for cleaning user's TLE and transponder data, see --help for list.
 - Satellite Map: Added shadow to satellite marker and label to enhance visual appearance
